@@ -17,3 +17,5 @@
 20071113: Enable quick access to "Recent Charts". Thanks to xley.
 
 20071113: Optional "Extra Toolbar" which currently only has "Recent Charts". Thanks to xley.
+
+20071128: Improved installation docs. Added important notes about ensuring that 'qmake' and friends, and 'ta-lib-config', are available on your $PATH. Improved notes about Apple Mac installation. Thanks to xley.
